test/fail/entity-prop-liststring.app
//Expected: collection of Entity type. Encountered: \[String\]
application test

entity Test {
  test : [String]
}

page root {}
